<resources>
    <string name="app_name">StoryHub</string>
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Ekspresikan dirimu, terhubung dengan orang lain, dan jelajahi cerita dari seluruh dunia. Bagikan momen-momenmu, besar atau kecil, dan biarkan ceritamu menginspirasi orang lain!</string>
    <string name="title_welcome_page">Selamat datang di StoryHub!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk tunjukan ceritamu?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="upload">upload</string>
    <string name="description">description</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="password_length_error">Password harus minimal 8 karakter</string>
    <string name="detail_story_title">Story Details</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Coba lagi</string>
    <string name="current_location">Tambahkan Lokasi Terkini</string>
    <string name="image_preview">Gambar</string>
</resources>